-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.0
-
Lustre client: 2.6.32-358.6.2.el6_lustre.g230b174, exporting via NFS.
-
3
-
10510
I couldn't find this exact stack in JIRA so I'm reporting it. Finally had to mount with abort_recov to stop the machine from hitting the same LBUG. kdump available upon request.
<0>LustreError: 3436:0:(llite_nfs.c:349:ll_get_parent()) ASSERTION( body->valid & (0x00000001ULL) ) failed: <0>LustreError: 3436:0:(llite_nfs.c:349:ll_get_parent()) LBUG <4>Pid: 3436, comm: nfsd <4> <4>Call Trace: <4> [<ffffffffa0432895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] <4> [<ffffffffa0432e97>] lbug_with_loc+0x47/0xb0 [libcfs] <4> [<ffffffffa0ac0ff3>] ll_get_parent+0x7b3/0x820 [lustre] <4> [<ffffffffa02f53b0>] reconnect_path+0x160/0x310 [exportfs] <4> [<ffffffffa02f57aa>] exportfs_decode_fh+0xea/0x2bc [exportfs] <4> [<ffffffffa0bfa810>] ? nfsd_acceptable+0x0/0x120 [nfsd] <4> [<ffffffffa034d5b0>] ? cache_check+0x60/0x360 [sunrpc] <4> [<ffffffffa0c00702>] ? exp_find_key+0x62/0xb0 [nfsd] <4> [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 <4> [<ffffffffa0bfad0a>] fh_verify+0x32a/0x640 [nfsd] <4> [<ffffffffa0c059ac>] nfsd3_proc_getattr+0x6c/0xe0 [nfsd] <4> [<ffffffffa0bf743e>] nfsd_dispatch+0xfe/0x240 [nfsd] <4> [<ffffffffa0343604>] svc_process_common+0x344/0x640 [sunrpc] <4> [<ffffffff81063310>] ? default_wake_function+0x0/0x20 <4> [<ffffffffa0343c40>] svc_process+0x110/0x160 [sunrpc] <4> [<ffffffffa0bf7b62>] nfsd+0xc2/0x160 [nfsd] <4> [<ffffffffa0bf7aa0>] ? nfsd+0x0/0x160 [nfsd] <4> [<ffffffff81096936>] kthread+0x96/0xa0 <4> [<ffffffff8100c0ca>] child_rip+0xa/0x20 <4> [<ffffffff810968a0>] ? kthread+0x0/0xa0 <4> [<ffffffff8100c0c0>] ? child_rip+0x0/0x20 <4> <0>Kernel panic - not syncing: LBUG <4>Pid: 3436, comm: nfsd Tainted: G --------------- T 2.6.32-358.6.2.el6_lustre.g230b174.x86_64 #1 <4>Call Trace: <4> [<ffffffff8150d878>] ? panic+0xa7/0x16f <4> [<ffffffffa0432eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs] <4> [<ffffffffa0ac0ff3>] ? ll_get_parent+0x7b3/0x820 [lustre] <4> [<ffffffffa02f53b0>] ? reconnect_path+0x160/0x310 [exportfs] <4> [<ffffffffa02f57aa>] ? exportfs_decode_fh+0xea/0x2bc [exportfs] <4> [<ffffffffa0bfa810>] ? nfsd_acceptable+0x0/0x120 [nfsd] <4> [<ffffffffa034d5b0>] ? cache_check+0x60/0x360 [sunrpc] <4> [<ffffffffa0c00702>] ? exp_find_key+0x62/0xb0 [nfsd] <4> [<ffffffff810096f0>] ? __switch_to+0xd0/0x320 <4> [<ffffffffa0bfad0a>] ? fh_verify+0x32a/0x640 [nfsd] <4> [<ffffffffa0c059ac>] ? nfsd3_proc_getattr+0x6c/0xe0 [nfsd] <4> [<ffffffffa0bf743e>] ? nfsd_dispatch+0xfe/0x240 [nfsd] <4> [<ffffffffa0343604>] ? svc_process_common+0x344/0x640 [sunrpc] <4> [<ffffffff81063310>] ? default_wake_function+0x0/0x20 <4> [<ffffffffa0343c40>] ? svc_process+0x110/0x160 [sunrpc] <4> [<ffffffffa0bf7b62>] ? nfsd+0xc2/0x160 [nfsd] <4> [<ffffffffa0bf7aa0>] ? nfsd+0x0/0x160 [nfsd] <4> [<ffffffff81096936>] ? kthread+0x96/0xa0 <4> [<ffffffff8100c0ca>] ? child_rip+0xa/0x20 <4> [<ffffffff810968a0>] ? kthread+0x0/0xa0 <4> [<ffffffff8100c0c0>] ? child_rip+0x0/0x20